# emaw

./: .gitignore  .markdownlint.json  01-product_brief.md  02-prd.md  03-architecture.md  04-agent-stories.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
cli/: config.py  discovery.py  doctor.py  env.py  generator.py  main.py  profile.py  questionnaire.py
install/: quickstart.sh
templates/: early-init.el.j2  emaw-mode.el.j2  init.el.j2
templates/ai-adapters/: claude.el.j2  ollama.el.j2
tests/: test_cli.py  test_config.py  test_discovery.py  test_doctor.py  test_elisp_integration.py  test_emaw_mode.el  test_env.py  test_generator.py  test_profile.py  test_questionnaire.py
