[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emacs-ai-workspace"
version = "0.1.0"
description = "Provision a productive AI-assisted coding environment in Emacs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.scripts]
emaw = "cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
exclude = ["tests*"]
